--- a/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.DAL.Contracts/TheS.Casinova.ChipExchange.DAL.Contracts.csproj
+++ b/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.DAL.Contracts/TheS.Casinova.ChipExchange.DAL.Contracts.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Command\GetMultiLevelNetworkInfoCommand.cs" />
     <Compile Include="Command\GetPlayerAccountInfoCommand.cs" />
+    <Compile Include="Command\GetPlayerBalanceCommand.cs" />
     <Compile Include="Command\GetVoucherInfoCommand.cs" />
     <Compile Include="DAL\IChipsExchangeModuleDataQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
