--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -135,6 +135,7 @@
     <Content Include="App_themes\sPerf\images\search.png" />
     <Content Include="App_themes\sPerf\images\text.png" />
     <Content Include="App_themes\sPerf\Layout.css" />
+    <Content Include="App_themes\sPerf\StyleProfile.css" />
     <Content Include="Areas\Club\Views\Club\AdvanceSearch.ascx" />
     <Content Include="Areas\Club\Views\Club\Banners.ascx" />
     <Content Include="Areas\Club\Views\Club\Index.aspx" />
@@ -175,12 +176,27 @@
     <Content Include="Areas\Scholarship\Views\Scholarship\SubMenu.ascx" />
     <Content Include="Areas\Scholarship\Views\Scholarship\Tournament.aspx" />
     <Content Include="club.html" />
+    <Content Include="Content\images\1.png" />
+    <Content Include="Content\images\2.png" />
     <Content Include="Content\images\comment.png" />
+    <Content Include="Content\images\e1.png" />
+    <Content Include="Content\images\e2.png" />
+    <Content Include="Content\images\f1.png" />
+    <Content Include="Content\images\f2.png" />
+    <Content Include="Content\images\f3.png" />
+    <Content Include="Content\images\f4.png" />
+    <Content Include="Content\images\f5.png" />
+    <Content Include="Content\images\go.jpg" />
+    <Content Include="Content\images\go.png" />
     <Content Include="Content\images\next-horizontal.png" />
     <Content Include="Content\images\next-vertical.png" />
+    <Content Include="Content\images\picuser.png" />
     <Content Include="Content\images\prev-horizontal.png" />
     <Content Include="Content\images\prev-vertical.png" />
+    <Content Include="Content\images\ProfileAvatar.png" />
+    <Content Include="Content\images\star.PNG" />
     <Content Include="Content\images\start.png" />
+    <Content Include="Content\jquery.autocomplete.css" />
     <Content Include="Content\skin.css" />
     <Content Include="Content\images\wanida.jpg" />
     <Content Include="Content\images\avartar.png" />
@@ -427,10 +443,14 @@
     <Content Include="Scripts\ajaxScripts\MicrosoftAjaxWebServices.js" />
     <Content Include="Scripts\ajaxScripts\Start.debug.js" />
     <Content Include="Scripts\ajaxScripts\Start.js" />
+    <Content Include="Scripts\jquery-1.3.2-vsdoc.js" />
+    <Content Include="Scripts\jquery-1.3.2.js" />
+    <Content Include="Scripts\jquery-1.4.2-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.2.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.1.custom.js" />
     <Content Include="Content\jquery.hoverscroll-0.2.2.css" />
     <Content Include="Scripts\jquery-ui.min.js" />
+    <Content Include="Scripts\jquery.autocomplete.js" />
     <Content Include="Scripts\jquery.hoverscroll-0.2.2.js" />
     <Content Include="Scripts\jquery.jcarousel.min.js" />
     <Content Include="Scripts\jquery.pager.js" />
