commit for pull update source
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Specs/TheS.Casinova.ChipExchange.BackServices.Specs/TheS.Casinova.ChipExchange.BackServices.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.ChipExchange.BackServices.Specs/TheS.Casinova.ChipExchange.BackServices.Specs.csproj
@@ -133,7 +133,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="BackServices\App.config" />
+    <None Include="BackServices\App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="BackServices\Specs\MoneyToBonusChips.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>MoneyToBonusChips.feature.cs</LastGenOutput>
