Add ColorsService Add silverlight colors service reference Add spect in game colors
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlight.Specs/TheS.Casinova.Colors.Specs.Silverlight/TheS.Casinova.Colors.Specs.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlight.Specs/TheS.Casinova.Colors.Specs.Silverlight/TheS.Casinova.Colors.Specs.Silverlight.csproj
@@ -79,6 +79,12 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight">
       <HintPath>$(MSBuildExtensionsPath)\..\Microsoft SDKs\Silverlight\v4.0\Toolkit\Apr10\Testing\Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight.dll</HintPath>
     </Reference>
+    <Reference Include="Rhino.Mocks 3.5.Silverlight">
+      <HintPath>..\..\..\..\lib\Rhino.Mocks 3.5.Silverlight.dll</HintPath>
+    </Reference>
+    <Reference Include="SpecFlowAssist.Silverlight">
+      <HintPath>..\..\..\..\lib\SpecFlowAssist.Silverlight.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="mscorlib" />
     <Reference Include="system" />
@@ -86,11 +92,36 @@
     <Reference Include="System.Net" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Windows.Browser" />
+    <Reference Include="TechTalk.SpecFlow.Silverlight">
+      <HintPath>..\..\..\..\lib\TechTalk.SpecFlow.Silverlight.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Colors\Specs\GetActiveGameRound.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetActiveGameRound.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Colors\Specs\GetGameStatistics.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetGameStatistics.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Colors\Specs\GetListGamePlayInformation.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetListGamePlayInformation.feature</DependentUpon>
+    </Compile>
     <Compile Include="Colors\Specs\Silverlight\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Colors\Specs\Steps\CommonSteps.cs" />
+    <Compile Include="Colors\Specs\Steps\GetActiveGameRoundsStep.cs" />
+    <Compile Include="Colors\SpecEventDefinitions.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Colors\Specs\Steps\GetGameStatisticsStep.cs" />
+    <Compile Include="Colors\Specs\Steps\GetListGamePlayInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -100,6 +131,19 @@
     </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="Colors\Specs\GetActiveGameRound.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetActiveGameRound.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Colors\Specs\GetGameStatistics.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetGameStatistics.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Colors\Specs\GetListGamePlayInformation.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetListGamePlayInformation.feature.cs</LastGenOutput>
+    </None>
     <None Include="Properties\AppManifest.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -112,6 +156,10 @@
       <Name>TheS.Casinova.Common.Silverlight</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <Import Condition="$(SilverlightVersion)=='v3.0'" Project="$(Registry:HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\SilverlightToolkit\Tools\v3.0)Microsoft.Silverlight.Toolkit.Build.targets" />
   <Import Condition="$(SilverlightVersion)=='v4.0'" Project="$(Registry:HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\SilverlightToolkit\Tools\v4.0)Microsoft.Silverlight.Toolkit.Build.targets" />
