--- a/src/CasinovaAll/Silverlights/SilverlightWeb/SilverlightWeb.csproj
+++ b/src/CasinovaAll/Silverlights/SilverlightWeb/SilverlightWeb.csproj
@@ -38,6 +38,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -73,6 +75,10 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="wsv\ColorsService.svc.cs">
+      <DependentUpon>ColorsService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="wsv\IColorsService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="CasinovaAllStarsTestPage.aspx" />
@@ -146,9 +152,20 @@
     <Content Include="Views\Shared\LogOnUserControl.ascx" />
     <Content Include="Views\Shared\Site.Master" />
     <Content Include="Views\Web.config" />
+    <Content Include="wsv\ColorsService.svc" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Modules\Colors\TheS.Casinova.Colors.Commands\TheS.Casinova.Colors.Commands.csproj">
+      <Project>{D96B565C-21E4-4D24-9084-B4E5B89A8AB4}</Project>
+      <Name>TheS.Casinova.Colors.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Colors\TheS.Casinova.Colors.Models\TheS.Casinova.Colors.Models.csproj">
+      <Project>{D6D472FB-4D74-4852-A0C7-AF4558B46C29}</Project>
+      <Name>TheS.Casinova.Colors.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -165,7 +182,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>23420</DevelopmentServerPort>
+          <DevelopmentServerPort>55631</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
