--- a/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TheS.Casinova.TwoWins.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TheS.Casinova.TwoWins.Silverlight.csproj
@@ -107,7 +107,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TwoWins\ViewModels\BetdataViewModel.cs" />
+    <Compile Include="TwoWins\ViewModels\StatisticsChartViewModel.cs" />
     <Compile Include="TwoWins\ViewModels\GamePlayViewModel.cs" />
     <Compile Include="TwoWins\ViewModels\GameStatisticsViewModel.cs" />
     <Compile Include="TwoWins\Views\BetDataPage.xaml.cs">
@@ -116,8 +116,8 @@
     <Compile Include="TwoWins\Views\GamePlayPage.xaml.cs">
       <DependentUpon>GamePlayPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="TwoWins\Views\GameStatisticsWindow.xaml.cs">
-      <DependentUpon>GameStatisticsWindow.xaml</DependentUpon>
+    <Compile Include="TwoWins\Views\StatisticsChartWindow.xaml.cs">
+      <DependentUpon>StatisticsChartWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="TwoWins\Views\GraphPage.xaml.cs">
       <DependentUpon>GraphPage.xaml</DependentUpon>
@@ -162,7 +162,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="TwoWins\Views\GameStatisticsWindow.xaml">
+    <Page Include="TwoWins\Views\StatisticsChartWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
