--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -157,9 +157,8 @@
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\PostNewVideos.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\SubmenuVideo.ascx" />
     <Content Include="Areas\Map\Views\Map\Index.aspx" />
-    <Content Include="Areas\Profile\Views\Profile\AdvanceSearch.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Archievement.aspx" />
-    <Content Include="Areas\Profile\Views\Profile\Banners.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\index_comment.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Blog.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Friends.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Inbox.aspx" />
@@ -176,6 +175,7 @@
     <Content Include="Areas\Scholarship\Views\Scholarship\SubMenu.ascx" />
     <Content Include="Areas\Scholarship\Views\Scholarship\Tournament.aspx" />
     <Content Include="club.html" />
+    <Content Include="Content\galleria.css" />
     <Content Include="Content\images\1.png" />
     <Content Include="Content\images\2.png" />
     <Content Include="Content\images\comment.png" />
@@ -190,13 +190,60 @@
     <Content Include="Content\images\go.png" />
     <Content Include="Content\images\next-horizontal.png" />
     <Content Include="Content\images\next-vertical.png" />
+    <Content Include="Content\images\nextPageArrow.gif" />
     <Content Include="Content\images\picuser.png" />
     <Content Include="Content\images\prev-horizontal.png" />
     <Content Include="Content\images\prev-vertical.png" />
+    <Content Include="Content\images\prevPageArrow.gif" />
     <Content Include="Content\images\ProfileAvatar.png" />
     <Content Include="Content\images\star.PNG" />
     <Content Include="Content\images\start.png" />
+    <Content Include="Content\img\flowing-rock.jpg" />
+    <Content Include="Content\img\grass-blades.jpg" />
+    <Content Include="Content\img\ladybug.jpg" />
+    <Content Include="Content\img\lightning.jpg" />
+    <Content Include="Content\img\lotus.jpg" />
+    <Content Include="Content\img\mojave.jpg" />
+    <Content Include="Content\img\pier.jpg" />
+    <Content Include="Content\img\sea-mist.jpg" />
+    <Content Include="Content\img\stones.jpg" />
+    <Content Include="Content\jquery.ad-gallery.css" />
     <Content Include="Content\jquery.autocomplete.css" />
+    <Content Include="Content\profile\1.jpg" />
+    <Content Include="Content\profile\10.jpg" />
+    <Content Include="Content\profile\11.jpg" />
+    <Content Include="Content\profile\12.jpg" />
+    <Content Include="Content\profile\13.jpg" />
+    <Content Include="Content\profile\14.jpg" />
+    <Content Include="Content\profile\2.jpg" />
+    <Content Include="Content\profile\3.jpg" />
+    <Content Include="Content\profile\4.jpg" />
+    <Content Include="Content\profile\5.jpg" />
+    <Content Include="Content\profile\6.jpg" />
+    <Content Include="Content\profile\7.jpg" />
+    <Content Include="Content\profile\8.jpg" />
+    <Content Include="Content\profile\9.jpg" />
+    <Content Include="Content\profile\ad_next.png" />
+    <Content Include="Content\profile\ad_prev.png" />
+    <Content Include="Content\profile\ad_scroll_back.png" />
+    <Content Include="Content\profile\ad_scroll_forward.png" />
+    <Content Include="Content\profile\LD.png" />
+    <Content Include="Content\profile\loader.gif" />
+    <Content Include="Content\profile\opa75.png" />
+    <Content Include="Content\profile\thumbs\t1.jpg" />
+    <Content Include="Content\profile\thumbs\t10.jpg" />
+    <Content Include="Content\profile\thumbs\t11.jpg" />
+    <Content Include="Content\profile\thumbs\t12.jpg" />
+    <Content Include="Content\profile\thumbs\t13.jpg" />
+    <Content Include="Content\profile\thumbs\t14.jpg" />
+    <Content Include="Content\profile\thumbs\t2.jpg" />
+    <Content Include="Content\profile\thumbs\t3.jpg" />
+    <Content Include="Content\profile\thumbs\t4.jpg" />
+    <Content Include="Content\profile\thumbs\t5.jpg" />
+    <Content Include="Content\profile\thumbs\t6.jpg" />
+    <Content Include="Content\profile\thumbs\t7.jpg" />
+    <Content Include="Content\profile\thumbs\t8.jpg" />
+    <Content Include="Content\profile\thumbs\t9.jpg" />
     <Content Include="Content\skin.css" />
     <Content Include="Content\images\wanida.jpg" />
     <Content Include="Content\images\avartar.png" />
@@ -231,7 +278,9 @@
     <Content Include="Content\ui.dialog.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="photocomment_dialog.html" />
     <Content Include="profile.html" />
+    <Content Include="reportDialog.html" />
     <Content Include="scholarship.html" />
     <Content Include="Scripts\ajaxScripts\Date.HijriCalendar.debug.js" />
     <Content Include="Scripts\ajaxScripts\Date.HijriCalendar.js" />
@@ -447,15 +496,21 @@
     <Content Include="Scripts\jquery-1.3.2.js" />
     <Content Include="Scripts\jquery-1.4.2-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.2.min.js" />
+    <Content Include="Scripts\jquery-1.4.4.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.1.custom.js" />
     <Content Include="Content\jquery.hoverscroll-0.2.2.css" />
     <Content Include="Scripts\jquery-ui.min.js" />
+    <Content Include="Scripts\jquery.ad-gallery.js" />
+    <Content Include="Scripts\jquery.ad-gallery.pack.js" />
     <Content Include="Scripts\jquery.autocomplete.js" />
+    <Content Include="Scripts\jquery.galleria.js" />
     <Content Include="Scripts\jquery.hoverscroll-0.2.2.js" />
     <Content Include="Scripts\jquery.jcarousel.min.js" />
+    <Content Include="Scripts\jquery.min.js" />
     <Content Include="Scripts\jquery.pager.js" />
     <Content Include="Scripts\jquery.popupWindow.js" />
     <Content Include="Scripts\jquery.tmpl.js" />
+    <Content Include="seeAll.html" />
     <Content Include="test.txt" />
     <Content Include="Views\Home\AboutUs.aspx" />
     <Content Include="Views\Home\AdvanceSearch.ascx" />
@@ -528,7 +583,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>3798</DevelopmentServerPort>
+          <DevelopmentServerPort>3195</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
