--- a/src/CasinovaAll/Silverlight.Specs/TheS.Casinova.Colors.Specs.Silverlight/TheS.Casinova.Colors.Specs.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlight.Specs/TheS.Casinova.Colors.Specs.Silverlight/TheS.Casinova.Colors.Specs.Silverlight.csproj
@@ -79,12 +79,17 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight">
       <HintPath>$(MSBuildExtensionsPath)\..\Microsoft SDKs\Silverlight\v4.0\Toolkit\Apr10\Testing\Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight.dll</HintPath>
     </Reference>
+    <Reference Include="PerfEx.Infrastructure.Silverlight, Version=1.7910.1008.999, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="PerfEx.Infrastructure.Silverlight.Advanced, Version=1.7910.1008.999, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="Rhino.Mocks 3.5.Silverlight">
       <HintPath>..\..\..\..\lib\Rhino.Mocks 3.5.Silverlight.dll</HintPath>
     </Reference>
     <Reference Include="SpecFlowAssist.Silverlight">
       <HintPath>..\..\..\..\lib\SpecFlowAssist.Silverlight.dll</HintPath>
     </Reference>
+    <Reference Include="System.CoreEx, Version=1.0.2698.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Observable, Version=1.0.0.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Reactive, Version=1.0.2698.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows" />
     <Reference Include="mscorlib" />
     <Reference Include="system" />
@@ -97,6 +102,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Colors\Specs\Bet.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Bet.feature</DependentUpon>
+    </Compile>
     <Compile Include="Colors\Specs\GetActiveGameRound.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -112,16 +122,23 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>GetListGamePlayInformation.feature</DependentUpon>
     </Compile>
+    <Compile Include="Colors\Specs\GetWinner.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetWinner.feature</DependentUpon>
+    </Compile>
     <Compile Include="Colors\Specs\Silverlight\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Colors\Specs\Steps\BetStep.cs" />
     <Compile Include="Colors\Specs\Steps\CommonSteps.cs" />
     <Compile Include="Colors\Specs\Steps\GetActiveGameRoundsStep.cs" />
     <Compile Include="Colors\SpecEventDefinitions.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Colors\Specs\Steps\GetGameStatisticsStep.cs" />
-    <Compile Include="Colors\Specs\Steps\GetListGamePlayInformation.cs" />
+    <Compile Include="Colors\Specs\Steps\GetListGamePlayInformationStep.cs" />
+    <Compile Include="Colors\Specs\Steps\GetWinnerStep.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,6 +149,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Colors\Specs\Bet.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Bet.feature.cs</LastGenOutput>
+    </None>
     <None Include="Colors\Specs\GetActiveGameRound.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>GetActiveGameRound.feature.cs</LastGenOutput>
@@ -143,6 +164,10 @@
     <None Include="Colors\Specs\GetListGamePlayInformation.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>GetListGamePlayInformation.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Colors\Specs\GetWinner.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetWinner.feature.cs</LastGenOutput>
     </None>
     <None Include="Properties\AppManifest.xml" />
   </ItemGroup>
